# geoproject-django

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
geoproject-django/: prestart.sh
geoproject-django/config/: celery.py  settings.py
