[project]
name = "geoproject-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.1",
    "django==5.2",
    "django-celery-beat>=2.8.0",
    "django-celery-results>=2.6.0",
    "psycopg>=3.2.6",
    "python-dotenv>=1.1.0",
]
